style Header nav

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -46,23 +46,48 @@
     @apply font-light leading-8 tracking-wide text-body text-grey-bokara;
   }
 
-  button {
-    font-family: inherit;
-    font-size: inherit;
-    font-weight: inherit;
-    color: inherit;
-    letter-spacing: inherit;
-    line-height: inherit;
-    text-transform: inherit;
+  input::placeholder {
+    @apply italic;
   }
+}
 
-  /* *,
-  ::before,
-  ::after {
-    box-sizing: border-box;
-    border-width: 0;
-    border-style: solid;
-    border-color: #e5e7eb;
-  } */
-
+@layer components {
+  .navigation-item {
+    @apply flex items-center font-medium leading-4 tracking-wider uppercase text-xsm whitespace-nowrap hover:shadow-nav-item;
+  }
+  /* TODO register in a new component styles */
+  #mobile-menu-toggler {
+    @apply relative w-4 h-4 transition-all duration-300 transform rotate-0;
+  }
+  
+  #mobile-menu-toggler span {
+    @apply block absolute h-0.5 w-full bg-grey-bokara opacity-100 left-0 transform rotate-0
+      transition-all duration-300;
+  }
+  
+  #mobile-menu-toggler span:nth-child(1) {
+    @apply top-0;
+  }
+  
+  #mobile-menu-toggler span:nth-child(2),
+  #mobile-menu-toggler span:nth-child(3) {
+    @apply transform -translate-y-1/2 top-1/2;
+  }
+  
+  #mobile-menu-toggler span:nth-child(4) {
+    @apply bottom-0;
+  }
+  
+  #mobile-menu-toggler[aria-expanded='true'] span:nth-child(1),
+  #mobile-menu-toggler[aria-expanded='true'] span:nth-child(4) {
+    @apply w-0 top-1/2 left-1/2;
+  }
+  
+  #mobile-menu-toggler[aria-expanded='true'] span:nth-child(2) {
+    @apply transform rotate-45 -translate-y-1/2;
+  }
+  
+  #mobile-menu-toggler[aria-expanded='true'] span:nth-child(3) {
+    @apply transform -rotate-45 -translate-y-1/2;
+  }
 }
