Sass header styling

--- a/src/assets/scss/abstracts/_mq.scss
+++ b/src/assets/scss/abstracts/_mq.scss
@@ -38,7 +38,8 @@ $mq-responsive: true !default;
 /// @type Map
 /// @link https://github.com/sass-mq/sass-mq#seeing-the-currently-active-breakpoint Full documentation and examples
 $mq-breakpoints: (
-    md:  768px,
+    xs: 0px,
+    md: 768px,
     lg: 1024px
 ) !default;
 
