--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -1,11 +1,10 @@
 /////////////////
-// Breakpoints //
+// BREAKPOINTS //
 /////////////////
-// $site-breakpoints: (
-// md: 768px,
-// lg: 1024px )
-
-
+$site-breakpoints: (
+xs: 0px,
+md: 768px,
+lg: 1024px );
 
 
 ////////////////
@@ -17,8 +16,10 @@ $font-family-base: 'Louis Vuitton Web', 'Helvetica Neue', 'Helvetica', 'Arial', 
 
 // Font-size
 $text-base: 1.125rem;
-$text-xxs: 0.5rem;
+$text-normal: 1rem;
+$text-sm: 0.875rem;
 $text-xsm: 0.8125rem;
+$text-xs: 0.5rem;
 
 // Font-weight
 $font-light: 300;
@@ -28,14 +29,18 @@ $font-semibold: 600;
 $font-bold: 700;
 
 // Letter Spacing
-$tracking-wide: 0.025em;
+$tracking-wide: 0.025rem;
+$tracking-wider: 0.05rem;
 
 // Line Height
 $leading-2: 0.5rem;
+$leading-4: 1rem;
+$leading-5: 1.25rem;
 $leading-8: 2rem;
 $leading-11: 2.75rem;
 
-// Text color
+// Colors
+$black-haze: #e1dfd8;
 $grey-bokara: #19110b;
 $white-floral: #f6f5f3;
 $wild-sand: #eae8e4;
@@ -48,20 +53,6 @@ $cola: #392d23;
 // Box shadow
 $shadow-header: 0 -1px 0 0 $wild-sand;
 $shadow-tools: 0 1px 0 0 $wild-sand;
-$shadow-navigation: inset 0 -1px 0 0 $wild-sand;
+$shadow-navigation: inset $shadow-header;
 $shadow-nav-item: inset 0 -1px 0 0 $grey-bokara;
 $shadow-nav-active: inset 0 -2px 0 0 $grey-bokara;
-
-/*   spacing: {
-    navsm: '6.4vw',
-    navxs: '4.26667vw',
-    navlg: '3.125vw',
-    18: '4.5rem',
-    38: '9.5rem',
-    50: '12.5rem',
-  }, 
-
-
-  flex: {
-    'shrink-1/3': '0 1 33.3333%',
-  }, */
