--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,13 +1,8 @@
-body {
-  font-family: $font-family-base;
-  font-size: $text-base;
-  color: $grey-bokara;
-  font-weight: $font-light;
-  line-height: $leading-8;
-  letter-spacing: $tracking-wide;
-}
-
-
 /* @include mq($from:md, $until: lg) {
 
 } */
+
+@import "./components/banner.scss";
+@import "./components/header.scss";
+
+
