add product styles

--- a/src/assets/scss/base/_animations.scss
+++ b/src/assets/scss/base/_animations.scss
@@ -1,6 +1,6 @@
 .transition-all	{
     transition-property: all;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-timing-function: cubic-bezier(.39,.575,.565,1);
     transition-duration: 300ms;
 }
 
