--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -5,5 +5,6 @@
 @import "./components/banner.scss";
 @import "./components/header.scss";
 @import "./components/product.scss";
+@import "./components/expandable.scss";
 
 
