--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -20,6 +20,7 @@ $gutter-sm: 3.125vw;
 // Width
 $w-1\/3: 33.33333%;
 $w-2\/3: 66.66667%;
+$w-full: 100%;
 
 
 ////////////////
@@ -30,11 +31,12 @@ $w-2\/3: 66.66667%;
 $font-family-base: 'Louis Vuitton Web', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
 
 // Font Size
+$text-xs: 0.5rem;
+$text-xsm: 0.8125rem;
+$text-sm: 0.875rem;
 $text-base: 1.125rem;
 $text-normal: 1rem;
-$text-sm: 0.875rem;
-$text-xsm: 0.8125rem;
-$text-xs: 0.5rem;
+$text-xl: 2.375rem;
 
 // Font Weight
 $font-light: 300;
@@ -44,6 +46,7 @@ $font-semibold: 600;
 $font-bold: 700;
 
 // Letter Spacing
+$tracking-none: 0;
 $tracking-wide: 0.025rem;
 $tracking-wider: 0.05rem;
 
@@ -52,6 +55,7 @@ $leading-2: 0.5rem;
 $leading-4: 1rem;
 $leading-5: 1.25rem;
 $leading-8: 2rem;
+$leading-10: 2.5rem;
 $leading-11: 2.75rem;
 
 // Colors
@@ -60,6 +64,7 @@ $grey-bokara: #19110b;
 $white-floral: #f6f5f3;
 $wild-sand: #eae8e4;
 $cola: #392d23;
+$success: #5c7e08;
 
 /////////////
 // EFFECTS //
@@ -71,3 +76,6 @@ $shadow-tools: 0 1px 0 0 $wild-sand;
 $shadow-navigation: inset $shadow-header;
 $shadow-nav-item: inset 0 -1px 0 0 $grey-bokara;
 $shadow-nav-active: inset 0 -2px 0 0 $grey-bokara;
+$shadow-button: inset 0 0 0 1px $grey-bokara;
+$shadow-button-hover: inset 0 0 0 1px $wild-sand;
+$shadow-underline: 0 1px 0;
