--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -65,6 +65,11 @@
   }
   
     // Delete input outline 
-    input:focus{
-        outline: none;
-    }
+  input:focus{
+    outline: none;
+  }
+
+  p {
+    margin-top: 1.125rem;
+    margin-bottom: 1.125rem;
+  }
