--- a/src/assets/scss/base/_icons.scss
+++ b/src/assets/scss/base/_icons.scss
@@ -2,9 +2,13 @@
     width: 1rem;
     height: 1rem;
   }
-.icon--small {
+.icon--sm {
     width: 0.75rem;
     height: 0.75rem;
+}  
+.icon--lg {
+    width: 2rem;
+    height: 2rem;
 }  
 
 .icon-with-count {
